# stepathon

./: README.md  pyproject.toml
stepathon/: __init__.py  api.py  distance_data.py  index_template.html  map.py  plot_data.py  reader.py
test_data/: coords.csv  stepathon_test_data.xlsx
